# ROS

./: README.md
catkin_ws/src/my_first_p/: CMakeLists.txt
catkin_ws/src/my_first_p/src/: hello_cpp_f.cpp
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros_ws/devel/lib/my_first_p/: hello_cpp_e
ros_ws/devel/lib/pkgconfig/: my_first_p.pc  node_basics_p.pc  topic_basics.pc
ros_ws/devel/lib/topic_basics/: pub_cpp_e
ros_ws/devel/share/my_first_p/cmake/: my_first_pConfig.cmake
ros_ws/devel/share/node_basics_p/cmake/: node_basics_pConfig.cmake
ros_ws/devel/share/topic_basics/cmake/: topic_basicsConfig.cmake
ros_ws/src/my_first_p/: CMakeLists.txt
ros_ws/src/my_first_p/scripts/: hello_py.py
ros_ws/src/my_first_p/src/: hello_cpp_f.cpp
ros_ws/src/node_basics_p/: CMakeLists.txt  package.xml
ros_ws/src/node_basics_p/scripts/: hello_py.py
ros_ws/src/node_basics_p/src/: hello_log.cpp
ros_ws/src/topic_basics/: CMakeLists.txt
ros_ws/src/topic_basics/scripts/: pub_1.py  sub_1.py
ros_ws/src/topic_basics/src/: pub_1.cpp
